make button background transparent

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="js-video-container"></div>
 
     <div>
-      <button class="js-play-button">▶</button>
+      <button class="js-play-button" aria-label="Play"></button>
     </div>
     <div class="time-display">
       <span class="js-current-time"></span>
