plug in play/pause button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="js-video-container"></div>
 
     <div>
-      <button class="js-play-button" aria-label="Play"></button>
+      <button type="button" class="js-play-button" aria-
+      label="Воспроизвести" title="Play"></button>
+      <button type="button" class="js-pause-button" aria-
+      label="Пауза" title="Pause" hidden></button>
     </div>
     <div class="time-display">
       <span class="js-current-time"></span>
